Add MIT license

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ui_biometrics_plugin
-description: "A new Flutter plugin project."
+description: "A Flutter UI plugin that builds on top of biometrics_plugin."
 version: 0.0.1
-homepage:
+repository: https://github.com/mahafarghaly/ui_biometrics_plugin.git
 
 environment:
   sdk: ^3.7.2
@@ -11,8 +11,7 @@ dependencies:
   app_settings: ^6.1.1
   flutter:
     sdk: flutter
-  biometrics_plugin:
-    path: ../biometrics_plugin
+  biometrics_plugin: ^0.0.2
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
